-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.0
-
None
-
-
6de36918c03e91933fbfb5bf7b53abbe03edf460 (qt/qtbase/dev) 5e4adb9fdab99749e3e75d8dc706ba6a0366f18d (qt/qtbase/6.2)
I provided an example. The pattern on the right is clearly serrated but the pattern on the left is not.
For Gerrit Dashboard: QTBUG-97269 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
375816,8 | Update clipping area when antialiasing changes | dev | qt/qtbase | Status: MERGED | +2 | 0 |
378665,2 | Update clipping area when antialiasing changes | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |