src/gui/painting/qpainter.cpp
@@ -2868,6 +2868,7 @@ void QPainter::setClipRegion(const QRegion &r, Qt::ClipOperation op)
             d->state->clipInfo.clear();
         d->state->clipInfo.append(QPainterClipInfo(r, op, d->state->matrix));
         d->state->clipOperation = op;
+        d->state->clipRegion = r;
         return;
     }
 
@@ -3081,6 +3082,7 @@ void QPainter::setClipPath(const QPainterPath &path, Qt::ClipOperation op)
             d->state->clipInfo.clear();
         d->state->clipInfo.append(QPainterClipInfo(path, op, d->state->matrix));
         d->state->clipOperation = op;
+        d->state->clipPath = path;
         return;
     }
 
